Rename QuantityTransacted to AmountTransacted
