# clientApp/src/api/generatedSdk/models/SingleTransaction.ts
@@ -36,7 +36,7 @@ export interface SingleTransaction {
      * @type {number}
      * @memberof SingleTransaction
      */
-    quantityTransacted: number;
+    amountTransacted: number;
     /**
      * 
      * @type {number}
@@ -82,7 +82,7 @@ export function instanceOfSingleTransaction(value: object): boolean {
     let isInstance = true;
     isInstance = isInstance && "date" in value;
     isInstance = isInstance && "cryptoTicker" in value;
-    isInstance = isInstance && "quantityTransacted" in value;
+    isInstance = isInstance && "amountTransacted" in value;
     isInstance = isInstance && "price" in value;
     isInstance = isInstance && "fee" in value;
     isInstance = isInstance && "transactionType" in value;
@@ -103,7 +103,7 @@ export function SingleTransactionFromJSONTyped(json: any, ignoreDiscriminator: b
         
         'date': json['date'],
         'cryptoTicker': json['cryptoTicker'],
-        'quantityTransacted': json['quantityTransacted'],
+        'amountTransacted': json['amountTransacted'],
         'price': json['price'],
         'fee': json['fee'],
         'transactionType': json['transactionType'],
@@ -124,7 +124,7 @@ export function SingleTransactionToJSON(value?: SingleTransaction | null): any {
         
         'date': value.date,
         'cryptoTicker': value.cryptoTicker,
-        'quantityTransacted': value.quantityTransacted,
+        'amountTransacted': value.amountTransacted,
         'price': value.price,
         'fee': value.fee,
         'transactionType': value.transactionType,
